renaming service and an extra step

--- a/codeship-steps.yml
+++ b/codeship-steps.yml
@@ -1,3 +1,6 @@
 - name: Jenkinsfile
-  service: jenkinsfileRunner
+  service: jenkins
+  command: -h
+- name: Jenkinsfile
+  service: jenkins
   command: -f /workspace
