try dockerfile with caching

--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,5 +1,6 @@
 jenkins:
-  image: jenkins4eval/jenkinsfile-runner:maven
+  dockerfile: Dockerfile.build
+  cached: true
   volumes: 
     - .:/workspace
 
