in build section

--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,5 +1,6 @@
 jenkins:
-  dockerfile: Dockerfile.build
+  build:
+    dockerfile: Dockerfile.build
   cached: true
   volumes: 
     - .:/workspace
