Use cloudbees/codeship-jenkinsfile-step:maven-latest in the branch

--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -1,5 +1,5 @@
 jenkins:
-  image: jenkins4eval/jenkinsfile-runner:maven
+  image: cloudbees/codeship-jenkinsfile-step:maven-latest
   volumes: 
     - .:/workspace
 
